use unpkg in gh-pages

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         padding: 0 3px;
       }
     </style>
-    <script src="dist/index.global.js"></script>
-    <link rel="stylesheet" href="styles/bylight.css" />
+    <script src="https://unpkg.com/bylight/dist/index.global.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/bylight/styles/bylight.css">
   </head>
   <body>
     <h1>Bylight Example</h1>
