feat: specify color as param on link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     </style>
     <script src="https://unpkg.com/bylight/dist/index.global.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/bylight/styles/bylight.css">
+
+    <!-- <script src="dist/index.global.js"></script>
+    <link rel="stylesheet" href="styles/bylight.css"> -->
+
   </head>
   <body>
     <h1>Bylight Example</h1>
@@ -57,7 +61,7 @@ Bylight makes highlighting easy for you!
     </pre>
     <ul>
       <li>
-        Highlight <a href="bylight:Roses?in=-1">Roses</a> (using link text)
+        Highlight <a href="bylight:Roses?in=-1&color=red">Roses</a> (using link text)
       </li>
       <li>
         Highlight <a href="bylight:?match=violets&in=-1">violets</a> (using
