--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Bylight makes highlighting easy for you!
     </pre>
     <ul>
       <li>
-        Highlight <a href="bylight:Roses?in=-1&color=red">Roses</a> (using link text)
+        Highlight <a href="bylight:Roses?in=-1&color=red">Roses</a> (using link text, and specifying <code>color=red</code>)
       </li>
       <li>
         Highlight <a href="bylight:?match=violets&in=-1">violets</a> (using
@@ -96,8 +96,7 @@ Bylight makes highlighting easy for you!
     </p>
     <pre>
 Pickles on pizza, ice cream on fries,
-Else clauses on Tuesdays, if blocks in disguise!
-    </pre>
+Else clauses on Tuesdays, if blocks in disguise!</pre>
 
     <h2>Regex Pattern</h2>
     <p>
@@ -111,8 +110,7 @@ Else clauses on Tuesdays, if blocks in disguise!
 const PI = 3.14159;
 const MAX_SIZE = 100;
 let variable = "This won't be highlighted";
-const COLORS = ['red', 'green', 'blue'];
-    </pre>
+const COLORS = ['red', 'green', 'blue'];</pre>
 
     <h2>Color Scheme</h2>
 
